--- a/src/lambda/views/index.html
+++ b/src/lambda/views/index.html
@@ -4,20 +4,24 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://unpkg.com/htmx.org@2.0.4" integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/htmx.org@2.0.4"
+		integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+"
+		crossorigin="anonymous"> </script>
 	<script src="https://unpkg.com/htmx.org/dist/ext/json-enc.js"></script>
+	<link rel="stylesheet" href="/css/">
 	<title>Online SQL Database</title>
 </head>
 
 <body>
+	<h1> Online SQL Database </h1>
 	<div class="query-container">
-		<form hx-post="/query" hx-ext="json-enc">
+		<form hx-post="/query" hx-ext="json-enc" hx-swap="innerHTML" hx-target="#query-results">
 			<label for="sql-query">Enter your SQL query:</label>
 			<input id="sql-query" name="query" placeholder="Write your SQL query here...">
-			<input id="placer" name="placeholder" value="Hello World">
 			<br>
 			<button type="submit">Run Query</button>
 		</form>
+
 	</div>
 	<div id="query-results">
 	</div>
