--- a/src/lambda/views/index.html
+++ b/src/lambda/views/index.html
@@ -4,26 +4,39 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+		rel="stylesheet">
 	<script src="https://unpkg.com/htmx.org@2.0.4"
-		integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+"
-		crossorigin="anonymous"> </script>
+		integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous">
+		</script>
 	<script src="https://unpkg.com/htmx.org/dist/ext/json-enc.js"></script>
 	<link rel="stylesheet" href="/css/">
 	<title>Online SQL Database</title>
 </head>
 
 <body>
-	<h1> Online SQL Database </h1>
-	<div class="query-container">
-		<form hx-post="/query" hx-ext="json-enc" hx-swap="innerHTML" hx-target="#query-results">
-			<label for="sql-query">Enter your SQL query:</label>
-			<input id="sql-query" name="query" placeholder="Write your SQL query here...">
-			<br>
-			<button type="submit">Run Query</button>
-		</form>
+	<div class="container">
+		<div id="query-container" class="box">
+			<form hx-post="/query" hx-ext="json-enc" hx-swap="none" hx-select-oob="#query-results, #additional-info">
+				<textarea id="sql-query" name="query" placeholder="Write your SQL query here..."></textarea>
+				<button type="submit">Run Query</button>
+			</form>
+		</div>
 
-	</div>
-	<div id="query-results">
+		<div id="query-results" class="box">
+			<!-- Query results will appear here -->
+		</div>
+
+		<div id="debugger" class="box">
+			<!-- Debug logs will appear here -->
+		</div>
+
+		<div id="additional-info" class="box">
+			<!-- Query plan or additional information will appear here -->
+		</div>
 	</div>
 </body>
 
