--- a/src/lambda/views/query_result.html
+++ b/src/lambda/views/query_result.html
@@ -1,13 +1,20 @@
-<table>
-	{% for header in headers %}
-	<th>{{ header.0 }} ({{ header.1 }})</th>
-	{% endfor %}
-
-	{% for row in rows %}
-	<tr>
-		{% for col in row %}
-		<td>{{ col }}</td>
-		{% endfor %}
-	</tr>
-	{% endfor %}
-</table>
+<div id="query-results" class="box">
+	<table>
+		<thead>
+			<tr>
+				{% for header in headers %}
+				<th>{{ header.0 }} ({{ header.1 }})</th>
+				{% endfor %}
+			</tr>
+		</thead>
+		<tbody>
+			{% for row in rows %}
+			<tr>
+				{% for col in row %}
+				<td>{{ col }}</td>
+				{% endfor %}
+			</tr>
+			{% endfor %}
+		</tbody>
+	</table>
+</div>
