--- a/src/deployment/views/index.html
+++ b/src/deployment/views/index.html
@@ -13,7 +13,7 @@
 		integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous">
 	</script>
 	<script src="https://unpkg.com/htmx.org/dist/ext/json-enc.js"></script>
-	<link rel="stylesheet" href="/css/">
+	<link rel="stylesheet" href="/css">
 	<title>Online SQL Database</title>
 </head>
 
