--- a/src/deployment/styles/style.css
+++ b/src/deployment/styles/style.css
@@ -34,20 +34,20 @@ body {
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
-.box::-webkit-scrollbar {
+::-webkit-scrollbar {
 	width: 12px;
 }
 
-.box::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
 	background-color: #f44336;
 	border-radius: 6px;
 }
 
-.box::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
 	background-color: #d32f2f;
 }
 
-.box::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
 	background-color: #333333;
 	border-radius: 6px;
 }
@@ -66,7 +66,10 @@ body {
 
 form {
 	height: 100%;
-	width: 100%;
+	width: calc(100% - 20px);
+	margin-left: 20px;
+	justify-content: center;
+	align-items: center;
 }
 
 #query-container textarea {
@@ -83,7 +86,7 @@ form {
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
-#query-container button {
+#query-container #submit-query-button {
 	display: flex;
 	float: right;
 	height: 50px;
@@ -137,4 +140,99 @@ form {
 
 .htmx-request .indicator {
 	display: block;
+}
+
+#examples-sidebar {
+	position: fixed;
+	top: 0;
+	left: -30%;
+	width: 30%;
+	height: 100%;
+	background-color: #333;
+	color: #fff;
+	overflow-y: auto;
+	transition: left 0.3s ease;
+	z-index: 1000;
+	border-right: 3px solid #444;
+}
+
+#examples-sidebar ul {
+	list-style-type: none;
+}
+
+#examples-sidebar li {
+	padding: 10px;
+	border-bottom: 1px solid #444;
+}
+
+#examples-sidebar li pre {
+	white-space: pre-wrap;
+	word-wrap: break-word;
+	word-break: break-word;
+	overflow-wrap: break-word;
+}
+
+#examples-sidebar li:hover {
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+#examples-button {
+	position: fixed;
+	left: 0;
+	top: 10%;
+	height: auto;
+	width: 25px;
+	background-color: #f44336;
+	color: #e0e0e0;
+	border: none;
+	font-weight: bold;
+	border-radius: 4px;
+	cursor: pointer;
+	writing-mode: vertical-lr;
+	text-orientation: sideways;
+	white-space: nowrap;
+	padding: 10px 0px 10px;
+	transition: left 0.3s ease;
+	z-index: 1100;
+}
+
+.keyword {
+	color: #f44336;
+	font-weight: bold;
+}
+
+#logos {
+	display: flex;
+	gap: 15px;
+	height: 30px;
+	justify-content: left;
+	align-items: center;
+	margin-top: 20px;
+}
+
+#logos .logo {
+	display: flex;
+	width: 40px;
+	/* Set a fixed size for logos */
+	height: 40px;
+	/* Set a fixed size for logos */
+	text-decoration: none;
+}
+
+#logos .logo img {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+	transition: transform 0.2s ease, filter 0.2s ease;
+	/* Smooth transition for scale and filter */
+	filter: invert(1);
+	/* Invert colors */
+}
+
+#logos .logo:hover img {
+	transform: scale(1.1);
+	/* Slight zoom effect on hover */
+	filter: invert(0);
+	/* Remove inversion on hover for a color change */
 }
