index bug fixes

--- a/src/deployment/views/index.html
+++ b/src/deployment/views/index.html
@@ -79,6 +79,7 @@
 			example.addEventListener("click", () => {
 				sqlQuery.value = example.textContent;
 				toggleExamplesSidebar();
+				sqlQuery.focus();
 			});
 		});
 	})
