multi-table truncate, more examples and keywords

--- a/src/deployment/views/index.html
+++ b/src/deployment/views/index.html
@@ -101,7 +101,7 @@
 		const keywords = [
 			"SELECT", "FROM", "WHERE", "CREATE", "TABLE", "INSERT", "INTO", "VALUES", "UNIQUE", "NOT", "NULL",
 			"IF", "EXISTS", "UINT", "INT", "TEXT", "BOOLEAN", "BOOL", "FLOAT", "OR", "AND", "DELETE", "UPDATE",
-			"TRUNCATE", "DROP", "LIMIT", "OFFSET"
+			"TRUNCATE", "DROP", "LIMIT", "OFFSET", "AS", "PREWHERE", "JOIN", "INNER", "ON", "SET", "EXPLAIN", "ANALYZE"
 		];
 
 		const highlightSql = (code) => {
