--- a/src/deployment/views/index.html
+++ b/src/deployment/views/index.html
@@ -36,41 +36,46 @@
 		</div>
 	</div>
 
-</body>
-</html>
-
-<script>
-	const examplesSidebar = document.getElementById("examples-sidebar");
-	const examplesButton = document.getElementById("examples-button");
-
-    function closeExamplesSidebar() {
-        examplesSidebar.style.left = "-300px";
-        examplesButton.style.left = "0px";
-    }
-
-	function toggleExamplesSidebar() {
-		const isOpen = examplesSidebar.style.left === "0px";
-
-		if (isOpen) {
-			closeExamplesSidebar();
-		} else {
-			examplesSidebar.style.left = "0px";
-			examplesButton.style.left = "300px";
-		}
-	}
-
-    document.addEventListener("click", (event) => {
-        const isClickInsideSidebar = examplesSidebar.contains(event.target);
-        const isClickOnButton = examplesButton.contains(event.target);
-
-        if (!isClickInsideSidebar && !isClickOnButton) {
-            closeExamplesSidebar();
-        }
-    });
-
-	document.addEventListener("DOMContentLoaded", () => {
+	<script>
+		const examplesSidebar = document.getElementById("examples-sidebar");
+		const examplesButton = document.getElementById("examples-button");
+		const examples = document.querySelectorAll(".example");
 		const form = document.querySelector("form");
 		const textarea = document.getElementById("sql-query");
+		const keywords = [
+			"SELECT", "FROM", "WHERE", "CREATE", "TABLE", "INSERT", "INTO", "VALUES", "UNIQUE", "NOT", "NULL",
+			"IF", "EXISTS", "UINT", "INT", "TEXT", "BOOLEAN", "BOOL", "FLOAT", "OR", "AND", "DELETE", "UPDATE",
+			"TRUNCATE", "DROP", "LIMIT", "OFFSET", "AS", "PREWHERE", "JOIN", "INNER", "ON", "SET", "EXPLAIN", "ANALYZE"
+		];
+
+		function closeExamplesSidebar() {
+			examplesSidebar.classList.remove("open");
+			examplesButton.classList.remove("open");
+		};
+
+		function toggleExamplesSidebar() {
+			examplesSidebar.classList.toggle("open");
+			examplesButton.classList.toggle("open");
+		};
+
+		function highlightSql(code) {
+			const keywordRegex = new RegExp(`\\b(${keywords.join('|')})\\b`, 'gi');
+			const commentRegex = /(--[^\n]*|\/\*[\s\S]*?\*\/)/g;
+
+			code = code.replaceAll(keywordRegex, (match) => `<span class="keyword">${match}</span>`);
+			code = code.replaceAll(commentRegex, (match) => `<span class="comment">${match}</span>`);
+
+			return code
+		};
+
+		document.addEventListener("click", (event) => {
+			const isClickInsideSidebar = examplesSidebar.contains(event.target);
+			const isClickOnButton = examplesButton.contains(event.target);
+
+			if (!isClickInsideSidebar && !isClickOnButton) {
+				closeExamplesSidebar();
+			}
+		});
 
 		textarea.addEventListener("keydown", (event) => {
 			if ((event.shiftKey || event.ctrlKey) && event.key === "Enter") {
@@ -78,15 +83,8 @@
 				form.requestSubmit();
 			}
 		});
-	});
 
-	document.addEventListener("DOMContentLoaded", () => {
 		examplesButton.addEventListener("click", () => toggleExamplesSidebar());
-	});
-
-	document.addEventListener("DOMContentLoaded", () => {
-		const examples = document.querySelectorAll(".example");
-		const textarea = document.getElementById("sql-query");
 
 		examples.forEach((example) => {
 			example.addEventListener("click", () => {
@@ -95,29 +93,10 @@
 				textarea.focus();
 			});
 		});
-	})
 
-	document.addEventListener('DOMContentLoaded', () => {
-		const keywords = [
-			"SELECT", "FROM", "WHERE", "CREATE", "TABLE", "INSERT", "INTO", "VALUES", "UNIQUE", "NOT", "NULL",
-			"IF", "EXISTS", "UINT", "INT", "TEXT", "BOOLEAN", "BOOL", "FLOAT", "OR", "AND", "DELETE", "UPDATE",
-			"TRUNCATE", "DROP", "LIMIT", "OFFSET", "AS", "PREWHERE", "JOIN", "INNER", "ON", "SET", "EXPLAIN", "ANALYZE"
-		];
-
-		const highlightSql = (code) => {
-			const keywordRegex = new RegExp(`\\b(${keywords.join('|')})\\b`, 'gi');
-			const commentRegex = /(--[^\n]*|\/\*[\s\S]*?\*\/)/g;
-
-
-			code = code.replaceAll(keywordRegex, (match) => `<span class="keyword">${match}</span>`);
-			code = code.replaceAll(commentRegex, (match) => `<span class="comment">${match}</span>`);
-
-			return code
-		};
-
-		const examples = document.querySelectorAll('.example');
 		examples.forEach((example) => {
 			example.innerHTML = highlightSql(example.innerHTML);
 		});
-	});
-</script>
+	</script>
+</body>
+</html>
