--- a/src/deployment/views/query_form.html
+++ b/src/deployment/views/query_form.html
@@ -1,4 +1,4 @@
-<form hx-post="/query" hx-ext="json-enc" hx-swap="none" hx-select-oob="#query-results, #additional-info">
+<form hx-post="/query" hx-ext="json-enc" hx-swap="none" hx-select-oob="#results-area, #additional-info">
 	<textarea id="sql-query" name="query" placeholder="Write your SQL queries here... [Shift+Enter to submit]"></textarea>
 
 	<div id="form-footer">
