--- a/src/deployment/views/query_result.html
+++ b/src/deployment/views/query_result.html
@@ -1,5 +1,5 @@
-<div id="query-results" class="box">
-	<table class="indication">
+<div id="results-area">
+	<table>
 		<thead>
 			<tr>
 				{% for header in headers %}
